исправленный проект